--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
   },
   "homepage": "https://github.com/Saransh99/RestFulAPIusingNode.js#readme",
   "dependencies": {
+    "config": "^2.0.1",
+    "debug": "^4.0.1",
     "express": "^4.16.3",
+    "helmet": "^3.13.0",
+    "joi": "^13.7.0",
     "mongoose": "^5.3.0",
+    "morgan": "^1.9.1",
+    "pug": "^2.0.3",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
