--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
   },
   "homepage": "https://github.com/Saransh99/RestFulAPIusingNode.js#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "config": "^2.0.1",
     "debug": "^4.0.1",
     "express": "^4.16.3",
+    "fawn": "^2.1.5",
     "helmet": "^3.13.0",
     "joi": "^13.7.0",
-    "mongoose": "^5.3.0",
+    "joi-objectid": "^2.0.0",
+    "joi-password-complexity": "^2.0.1",
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.3.1",
     "morgan": "^1.9.1",
     "pug": "^2.0.3",
     "underscore": "^1.9.1"
