--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "config": "^2.0.1",
     "debug": "^4.0.1",
     "express": "^4.16.3",
+    "express-async-errors": "^3.0.0",
     "fawn": "^2.1.5",
     "helmet": "^3.13.0",
     "joi": "^13.7.0",
@@ -31,7 +32,9 @@
     "mongoose": "^5.3.1",
     "morgan": "^1.9.1",
     "pug": "^2.0.3",
-    "underscore": "^1.9.1"
+    "underscore": "^1.9.1",
+    "winston": "^3.1.0",
+    "winston-mongodb": "^4.0.3"
   },
   "devDependencies": {
     "jshint": "^2.9.6"
